# revery

./: .gitignore  CRUSH.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  PROTOCOL.md  README.md  devenv.nix  package-lock.json
.github/: release-please-config.json  release-please-manifest.json
.github/workflows/: cd.yml  ci.yml
crates/revery/: CHANGELOG.md  Cargo.toml
crates/revery-onion/: Cargo.toml  README.md
crates/revery-onion/src/: client.rs  error.rs  lib.rs  service.rs
crates/revery/src/: lib.rs
crates/revery/src/auth/: error.rs  flow.rs  keys.rs  mod.rs
crates/revery/src/protocol/: error.rs  mod.rs  wire.rs
crates/revery/src/session/: conversation.rs  error.rs  message.rs  mod.rs
